--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ body {
 }
 
 .dropdownButton {
-  min-width: "90%";
+  min-width: 90%;
   max-width: 400px;
   background-color: #ffffff;
   border-width: 1px;
@@ -134,8 +134,8 @@ body {
   border: solid;
   border-color: #e6e6e6;
   border-width: 1px;
-  padding-right: 2.5px;
-  padding-left: 2.5px;
+  padding-right: 1px;
+  padding-left: 1px;
   padding-top: 5px;
   padding-bottom: 5px;
   max-width: 60;
